--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@
 ./database/node_modules
 
 # backend
-./backend/venv
+./backend/.venv
 
 # Created by https://www.toptal.com/developers/gitignore/api/python
 # Edit at https://www.toptal.com/developers/gitignore?templates=python
