S-006: Backend SQLite DB initialization (#11)
* S-006: Database initialization

* S-006: ExpressJS API Initialization and testing

* S-006: Refactor, config files, CI/CD set up

* .gitignore modification

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,12 @@
+# front-end
 ./frontend/node_modules
 ./frontend/.next
 
+# database
+./database/node_modules
+
+# backend
 ./backend/.venv
-./backend/venv
 
 # Created by https://www.toptal.com/developers/gitignore/api/python
 # Edit at https://www.toptal.com/developers/gitignore?templates=python
