--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,70 +1,18 @@
-annotated-types==0.6.0
-anyio==3.7.1
-appnope==0.1.4
-asttokens==2.4.1
-blinker==1.8.2
-boto3==1.28.78
-botocore==1.31.78
-certifi==2023.7.22
+certifi==2024.8.30
 charset-normalizer==3.3.2
-click==8.1.7
 colorama==0.4.6
-comm==0.1.4
-cors==1.0.1
-debugpy==1.8.0
-decorator==5.1.1
-executing==2.0.1
 filelock==3.15.4
-Flask==3.0.3
-future==1.0.0
-gevent==24.2.1
-greenlet==3.0.3
-h11==0.14.0
-httptools==0.6.1
-idna==3.4
-ipykernel==6.26.0
-ipython==8.17.2
-itsdangerous==2.2.0
-jedi==0.19.1
-Jinja2==3.1.4
-jmespath==1.0.1
-jupyter_client==8.5.0
-jupyter_core==5.5.0
-MarkupSafe==2.1.5
-matplotlib-inline==0.1.6
-nest-asyncio==1.5.8
-packaging==23.2
-parso==0.8.3
-pexpect==4.9.0
-platformdirs==3.11.0
-prompt-toolkit==3.0.39
-psutil==5.9.6
-ptyprocess==0.7.0
-pure-eval==0.2.2
-pydantic==2.4.2
-pydantic_core==2.10.1
-Pygments==2.16.1
-PySocks==1.7.1
-python-dateutil==2.8.2
-python-dotenv==1.0.0
-PyYAML==6.0.1
-pyzmq==25.1.1
-requests==2.31.0
-requests-file==2.1.0
-s3transfer==0.7.0
-six==1.16.0
-sniffio==1.3.0
-stack-data==0.6.3
-starlette==0.27.0
-tldextract==5.1.2
-tornado==6.3.3
-traitlets==5.13.0
-typing_extensions==4.8.0
-urllib3==2.0.7
-uvicorn==0.24.0
-watchfiles==0.21.0
-wcwidth==0.2.9
-websockets==12.0
-Werkzeug==3.0.3
-zope.event==5.0
-zope.interface==6.4.post2
+fsspec==2024.9.0
+huggingface-hub==0.24.6
+idna==3.8
+numpy==2.1.1
+packaging==24.1
+PyYAML==6.0.2
+regex==2024.7.24
+requests==2.32.3
+safetensors==0.4.5
+tokenizers==0.19.1
+tqdm==4.66.5
+transformers==4.44.2
+typing_extensions==4.12.2
+urllib3==2.2.2
